# shotkeeper_tauri

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
src/: App.tsx  api.ts  i18n.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  screenshot.rs  settings.rs  tray.rs  watcher.rs  window.rs
src/components/: BottomMenu.tsx  Button.tsx  ConfirmModal.tsx  EmojiPicker.tsx  Input.tsx  PathItem.tsx  SettingsHeader.tsx  SortablePathItem.tsx
src/contexts/: LanguageContext.tsx
src/hooks/: useAppLanguage.ts
src/locales/: en.json  fr.json  ko.json
src/utils/: icons.ts
src/views/: PopupView.tsx  SettingsView.tsx
