[package]
name = "shotkeeper"
version = "0.1.0"
description = "ShotKeeper - Screenshot Organizer"
authors = ["Pendant-K"]
edition = "2021"

[lib]
name = "shotkeeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dirs = "6"
unicode-normalization = "0.1"
